
* Major enhancement(s):
  * FR#14853 - Added support for ActiveRecord transactions on a per file basis
* Minor enhancement(s):
  * FR#14855 - Store processed files in a year/month directory structure based on processed date (ie - 2007/10)
  * If the 'echi_ftp_directory' option in application.yml is left blank/nil, the system will not attempt a change directory
  * The system now builds the files to process array from the to_process directory instead of the ftp list, to allow for better recovery if a failure occurs
* Bug fix(es):
  * Fixed bug #14585 requiring Hoe for the install
  * Will now properly toggle between the standard schema and the Presence schema (ie - override ActiveRecord defaults)

== 0.2.1 2007-10-26

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):
  * Fixed the database schema to pull from the appropriate config file information for the PCO schema

== 0.2.2 2007-10-26

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):
  * Fixed the utility to only process files with the prefix 'chr' in order to avoid picking up other files from the 'to_process' directory
  * Fixed the database_presence.rb to explicitly define tables rather than derive from the application.yml

== 0.3.0 2007-11-02

* Major enhancement(s):
  * Added the ability to auto-recognize when running on Windows and enable running as a Windows Service (FR#14856/14852)
* Minor enhancement(s):
  * Changed 'echi_ftp_delete:' default setting to 'Y'
  * A fair amount of internal code refactoring
* Bug fix(es):
  * Fixed bug so that the log file properly reports when a file is processed

== 0.3.1 2007-11-TBD

* Major enhancement(s):
* Minor enhancement(s):
  * Removed the need for the default install requirement, Ruby may now be installed anywhere on the Windows system (FR#15302)
  * Modified the return status when creating or manipulating a Windows service
  * Add the 'echi-converter status' command to check the status of a Windows service
* Bug fix(es):